<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_the_app">"Meta Settings:
 The communication difficulty level and the ip address of the server can (and has to) be changed in this menu  reachable from the landing activity.
 The Meta Settings are not part of the attackable app itself. Feel free to try, but there is no weakness
        there.

"</string>
    <string name="about_the_app_attacks">Most if not all parts of the app are attackable in some way, shape or form. While some vulnerabilities might be exploitable from within the app, others need you to use tools or even write your own malicious app.</string>
    <string name="about_the_app_intention">DIBA was created with the intention of feeling like any other banking app you could find on the playstore, with the key difference being that it is intentionally weak in its security.</string>
    <string name="about_the_app_meta_text">The Meta settings screen is not ment to be attacked. Currently there are three settings you can change to your liking:</string>
    <string name="about_the_app_meta_text_difficulty">2) Difficulty, as mentioned above, change to see if you could break the communication even on different levels. Note that Difficulty level 5 has no known weakness.</string>
    <string name="about_the_app_meta_text_ip">1) IP, change this field to the IP of your DIBA Server to make the app functional.</string>
    <string name="about_the_app_meta_text_timeout">3) Timeout, the amount of milliseconds till the connection times out.</string>
    <string name="about_the_app_metatitle">About the Metasettings</string>
    <string name="about_the_app_run_communication">While the communication between the client (app) and server are not the main focus of DIBAs security, you can adjust the difficulty level of the communication security to test your knowledge in ssl/tls and certificates.</string>
    <string name="about_the_app_run_text">Run an instance of the DIBA Server on your PC, as long as it has internet connectivity you should be fine. Be aware that if your cellphone and server are not in the same network, you might have to port forward the port 8443 for it to work. Now you must fetch the ip address of your server with ifconfig (or simmilar) and adjust IP in the meta settings of DIBA.</string>
    <string name="about_the_app_runtitle">How to use the app.</string>
    <string name="about_the_app_subtitle">Insecure Banking, done the right way.</string>
    <string name="about_the_app_training">In junction with the DIBAServer, it is a training opportunity for mobile penetration testers that contains many android specific weaknesses in varying difficulty. It can furthermore serve as a tool for educators, who want to create a curriculum for their students.</string>
    <string name="action_info">About the App</string>
    <string name="action_meta">Meta Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_cancel">Cancel</string>
    <string name="action_sign_in">Create Account</string>
    <string name="action_sign_in_short">Create Account</string>
    <string name="alphabet">abcdefghijklmnopqrstuvwxyz</string>
    <string name="app_name">DIBA</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hash">38fdfd0abe632f5c4c43b7e96c515c7a92188f0f0d76388ab12f529e3852632c</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="item_view_role_description">Tab</string>
    <string name="library_android_database_sqlcipher_author">Zetetic, LLC</string>
    <string name="library_android_database_sqlcipher_authorWebsite">https://www.zetetic.net/sqlcipher/</string>
    <string name="library_android_database_sqlcipher_isOpenSource">true</string>
    <string name="library_android_database_sqlcipher_libraryDescription">Android SQLite API based on SQLCipher</string>
    <string name="library_android_database_sqlcipher_libraryName">SQLCipher for Android</string>
    <string name="library_android_database_sqlcipher_libraryVersion">${clientVersionNumber}</string>
    <string name="library_android_database_sqlcipher_libraryWebsite">https://www.zetetic.net/sqlcipher/</string>
    <string name="library_android_database_sqlcipher_licenseLink">https://www.zetetic.net/sqlcipher/license/</string>
    <string name="library_android_database_sqlcipher_repositoryLink">https://github.com/sqlcipher/android-database-sqlcipher</string>
    <string name="login_failed">Login failed</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="payslip_info_back">When returning to the payment screen and a payslip was loaded, the text will appear on that screen as well.</string>
    <string name="payslip_info_load">"Next to the load button, there is a field where you can enter the name or path of the file to load  from the SD-Card. The base path is the root folder of your SD-Card. This is the folder that is shown  when you connect your phone to the PC or use the SD-Card directly with a device."</string>
    <string name="payslip_info_sample">The Load Sample button needs little description, it loads a payslip that can be adjusted and saved.</string>
    <string name="payslip_info_save">"Next to the save button, there is a field where you can enter the name or path of the file to save  to the SD-Card. The base path is the same as when loading a file."</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
</resources>