<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginEnd="16.0dip">
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/colorText" android:id="@id/infoSubTitle" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_the_app_subtitle" android:fontFamily="@font/diba_text" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="12.0sp" android:textColor="@color/colorText" android:id="@id/infoIntention" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/about_the_app_intention" android:fontFamily="@font/diba_text" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/infoSubTitle" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="12.0sp" android:textColor="@color/colorText" android:id="@id/infoTraining" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/about_the_app_training" android:fontFamily="@font/diba_text" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/infoIntention" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="12.0sp" android:textColor="@color/colorText" android:id="@id/infoAttacks" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/about_the_app_attacks" android:fontFamily="@font/diba_text" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/infoTraining" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/colorText" android:id="@id/infoRunTitle" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/about_the_app_runtitle" android:fontFamily="@font/diba_text" app:layout_constraintTop_toBottomOf="@id/infoAttacks" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="12.0sp" android:textColor="@color/colorText" android:id="@id/infoRunText" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/about_the_app_run_text" android:fontFamily="@font/diba_text" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/infoRunTitle" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="12.0sp" android:textColor="@color/colorText" android:id="@id/infoRunCommunication" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/about_the_app_run_communication" android:fontFamily="@font/diba_text" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/infoRunText" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/colorText" android:id="@id/infoMetaTitle" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/about_the_app_metatitle" android:fontFamily="@font/diba_text" app:layout_constraintTop_toBottomOf="@id/infoRunCommunication" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="12.0sp" android:textColor="@color/colorText" android:id="@id/infoMetaText" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/about_the_app_meta_text" android:fontFamily="@font/diba_text" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/infoMetaTitle" />
        <ImageView android:id="@id/infoMetaPictuture" android:layout_width="fill_parent" android:layout_height="193.0dip" android:layout_marginTop="-100.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/infoMetaText" app:srcCompat="@drawable/metasettings" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="12.0sp" android:textColor="@color/colorText" android:id="@id/infoMetaTextIP" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/about_the_app_meta_text_ip" android:fontFamily="@font/diba_text" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/infoMetaPictuture" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="12.0sp" android:textColor="@color/colorText" android:id="@id/infoMetaTextDifficulty" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/about_the_app_meta_text_difficulty" android:fontFamily="@font/diba_text" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/infoMetaTextIP" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textSize="12.0sp" android:textColor="@color/colorText" android:id="@id/infoMetaTextTimeout" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/about_the_app_meta_text_timeout" android:fontFamily="@font/diba_text" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/infoMetaTextDifficulty" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>