<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:id="@id/paySlipInfoReturn" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/payslip_info_back" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/paySlipButtonInfoSample" />
        <TextView android:id="@id/paySlipInfoSample" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="64.0dip" android:text="@string/payslip_info_sample" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toStartOf="@id/paySlipButtonInfoSample" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/paySlipButtonInfoSave" />
        <ImageButton android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textStyle="bold" android:textColor="@android:color/background_light" android:id="@id/paySlipButtonInfoSample" android:background="@drawable/button_background" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginTop="64.0dip" android:fontFamily="@font/diba_text" android:textAlignment="center" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/paySlipButtonInfoSave" app:srcCompat="@drawable/ic_help_outline_black_24dp" />
        <TextView android:id="@id/paySlipInfoLoad" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/payslip_info_load" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toStartOf="@id/paySlipButtonInfoLoad" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <ImageButton android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textStyle="bold" android:textColor="@android:color/background_light" android:id="@id/paySlipButtonInfoLoad" android:background="@drawable/button_background" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginTop="16.0dip" android:fontFamily="@font/diba_text" android:textAlignment="center" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_file_download_black_24dp" />
        <TextView android:id="@id/paySlipInfoSave" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="92.0dip" android:layout_marginBottom="8.0dip" android:text="@string/payslip_info_save" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/paySlipButtonInfoSave" app:layout_constraintHorizontal_bias="0.687" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/paySlipButtonInfoLoad" app:layout_constraintVertical_bias="0.0" />
        <ImageButton android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textStyle="bold" android:textColor="@android:color/background_light" android:id="@id/paySlipButtonInfoSave" android:background="@drawable/button_background" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginTop="92.0dip" android:fontFamily="@font/diba_text" android:textAlignment="center" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/paySlipButtonInfoLoad" app:srcCompat="@drawable/ic_file_upload_black_24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>